--- a/index.html
+++ b/index.html
@@ -20,17 +20,12 @@
   }
 </style>
 </head>
-<body>
-<!--
-  🔒 Hidden message:
-  "Only the curious will find the secret."
-  (Look in 'View Source' or Inspect > Elements)
--->
+<body>=
 <img src="https://media.discordapp.net/attachments/1144466291353202758/1419208585547616297/Gx70HSJXcAAl_IQ.jpg?ex=68d0ec7e&is=68cf9afe&hm=ca29e24f3b97f97fe108c0a274a2de7fad1cfc6e3a6d72143e94d37fb9ddd889&=&format=webp&width=1029&height=999" 
      alt="Shared image">
 <script>
-  // Extra hidden note in the console:
-  console.log("Secret (console): Only the curious will find the secret.");
+  console.log("Didn't think you would think of this... getting a little scared now.");
 </script>
 </body>
 </html>
+
