--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 </head>
 <body>=
 <img src="https://media.discordapp.net/attachments/1414236643912712456/1419231617142226944/maddImage.png?ex=68d101f1&is=68cfb071&hm=e6ee44936f598949a4d63d967785758ff40b1d862a7dbaa5d07891e905ee950f&=&format=webp&quality=lossless&width=435&height=85" 
-     alt="110111110011100000110011110010100000110110110101100000110111111000100000110110111000100000110011110010100000111000111001">
+     alt="110111 110011 100000 110110 110101 100000 110111 111000 100000 110110 111000 100000 111000 111001">
 <script>
   console.log("I like how you think, you didn't take the bait to find that image... or maybe you did. Anyways, paste this link into your browser and solve it.");
 </script>
 </body>
 </html>
+
 
 
 
