--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Hidden Message Example</title>
+<title>Cool Image</title>
 <style>
   body {
     display: flex;
@@ -28,6 +28,7 @@
 </script>
 </body>
 </html>
+
 
 
 
