--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     height: 100vh;
     margin: 0;
     background: #111;
+    background: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.reddit.com%2Fr%2Fmontreal%2Fcomments%2F8zncav%2Fentr%C3%A9e_de_ville_bonaventure%2F&psig=AOvVaw3tGkDfm57J-ZnmDxep7wHm&ust=1758566367910000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCLCqprDA6o8DFQAAAAAdAAAAABAE') no-repeat center center;
+    background-size: cover;
   }
+
   img {
     max-width: 90%;
     height: auto;
@@ -28,6 +31,7 @@
 </script>
 </body>
 </html>
+
 
 
 
