--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 </style>
 </head>
 <body>
-<a href="https://im-a-puzzle.com/share/06f10d8cf6aea15" style="display:none;">
-  secret puzzle
-</a>
+<a href="https://im-a-puzzle.com/share/ecdbae03693fbfe" style="display:none;"> </a>
+<a href="https://im-a-puzzle.com/share/47fb75df69fe56d" style="display:none;"> </a>
+<a href="https://im-a-puzzle.com/share/9bf51f9d8901b3f" style="display:none;"> </a>
+<a href="https://im-a-puzzle.com/share/06f10d8cf6aea15" style="display:none;"> </a>
+<a href="https://im-a-puzzle.com/share/aa6544324e8f01e" style="display:none;"> </a>
 <img src="https://media.discordapp.net/attachments/1414236643912712456/1419231617142226944/maddImage.png?ex=68d101f1&is=68cfb071&hm=e6ee44936f598949a4d63d967785758ff40b1d862a7dbaa5d07891e905ee950f&=&format=webp&quality=lossless&width=435&height=85" 
      alt="110111 110011 100000 110110 110101 100000 110111 111000 100000 110110 111000 100000 111000 111001">
 <script>
@@ -34,6 +36,7 @@
 </script>
 </body>
 </html>
+
 
 
 
