--- a/index.html
+++ b/index.html
@@ -21,9 +21,24 @@
     border-radius: 12px;
     box-shadow: 0 8px 30px rgba(0,0,0,.6);
   }
+
+  .qr-code {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 80px;    /* adjust size */
+  height: auto;
+  opacity: 0.7;   /* slightly transparent */
+  cursor: pointer;
+}
+.qr-code:hover {
+  opacity: 1;     /* makes it pop when hovered */
+}
 </style>
 </head>
 <body>
+<img src="https://cdn.discordapp.com/attachments/1412569257295876218/1419396891338215565/image.png?ex=68d19bde&is=68d04a5e&hm=9943d847092dec3984c783ec377e7e67a1ea5b128d4f3bca65b59d07f0d8dff6&" 
+     alt="DO NOT SCAN! IMPORTANT ASPECT TO PUZZLE" class="qr-code">
 <a href="https://im-a-puzzle.com/share/ecdbae03693fbfe" style="display:none;"> </a>
 <a href="https://im-a-puzzle.com/share/47fb75df69fe56d" style="display:none;"> </a>
 <a href="https://im-a-puzzle.com/share/9bf51f9d8901b3f" style="display:none;"> </a>
@@ -36,6 +51,7 @@
 </script>
 </body>
 </html>
+
 
 
 
