--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 <a href="https://im-a-puzzle.com/share/9bf51f9d8901b3f" style="display:none;"> </a>
 <a href="https://im-a-puzzle.com/share/06f10d8cf6aea15" style="display:none;"> </a>
 <a href="https://im-a-puzzle.com/share/aa6544324e8f01e" style="display:none;"> </a>
-<img src="https://media.discordapp.net/attachments/1414236643912712456/1419231617142226944/maddImage.png?ex=68d101f1&is=68cfb071&hm=e6ee44936f598949a4d63d967785758ff40b1d862a7dbaa5d07891e905ee950f&=&format=webp&quality=lossless&width=435&height=85" 
+<img src="https://cdn.discordapp.com/attachments/1412569257295876218/1419406554024902667/maddImage.png?ex=68d1a4dd&is=68d0535d&hm=34ccd989b2752457c5daeedb7d61fc641af774538c746b7194668f857305e498" 
      alt="110111 110011 100000 110110 110101 100000 110111 111000 100000 110110 111000 100000 111000 111001">
 <script>
   console.log("I like how you think, you didn't take the bait to find that image... but you took this one LOL. I'll commend you for what you did though, Once you find the real hint... Not all that is given is how it is, you may need to take a corners instead of a straight path.");
 </script>
 </body>
 </html>
+
 
 
 
