--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     height: 100vh;
     margin: 0;
     background: #111;
+    /*CAPITAL Letters Only.*/
     background: url('https://lh3.googleusercontent.com/gps-cs-s/AC9h4nrHaSVcnI0-Qw8EZ444k0jOF3zE49Z-geLRaBXmaEQbUWNStNeRHOfZYtbnXKVLCK4KYNsCW8ALRtuvQO8w__bLTW0ULmzNYRvEUl78sZcbnyIhVmWDSKE8C1NPFhNWVMyB0knn=s1360-w1360-h1020-rw') no-repeat center center;
     background-size: cover;
   }
@@ -51,6 +52,7 @@
 </script>
 </body>
 </html>
+
 
 
 
